fix: overflow x and button to see codes

--- a/public/codes/codes.css
+++ b/public/codes/codes.css
@@ -1,3 +1,11 @@
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 .codes-container {
   position: absolute;
   top: 100vh;
@@ -8,13 +16,15 @@
   width: calc(100vw - 32px);
 
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
 
   padding: 16px 0;
 }
 
 .code {
-  width: calc((100vw - 32px - (16px * 2))/3);
+  flex: 1;
+  min-width: calc(375px - 32px);
 
   border-radius: 6px;
   padding: 40px 16px;
@@ -56,7 +66,7 @@
   background-color: #FFBB32;
 }
 
-.code span::after {
+.code .green-ball::after {
   content: '';
 
   position: absolute;
@@ -69,4 +79,45 @@
   border-radius: 50%;
 
   background-color: #29C93F;
+}
+
+.link {
+  position: fixed;
+  bottom: 32px;
+  right: 64px;
+
+  text-decoration: none;
+
+  color: #FFF;
+  font: 600 12px sans-serif;
+
+  background-color: #4338CA;
+  box-shadow: 0 0 0 0 #E0E7FF;
+  border-radius: 8px;
+
+  width: 102px;
+  height: 40px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(224, 231, 255, 0.7);
+  }
+
+  60% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(224, 231, 255, 0);
+  }
+
+  100% {
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(224, 231, 255, 0);
+  }
 }
